--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cool Countdown Timer</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
     <div class="container">
-      <h1>Remaining time until SAS results</h1>
-      <div id="countdown" class="countdown"></div>
+        <h1>Remaining time until SAS results</h1>
+        <div id="countdown" class="countdown"></div>
     </div>
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
